--- a/todo-list/src/components/ListItems.css
+++ b/todo-list/src/components/ListItems.css
@@ -28,3 +28,12 @@
     margin: 7px;
     
 }
+.list p input{
+    background-color:transparent;
+    border:0;
+    color:#fff;
+    font-size:18px;
+}
+.list p input:focus{
+    outline:none
+}
